# claude-hourglass

./: .gitignore  README.md  pyproject.toml  requirements.txt
Docs/: 仕様.md
claude_hourglass/: config.py  database.py  main.py  models.py  official_ingest.py  official_webview_collector.py  receiver.py  resources.py  sources.py  startup.py  tray.py
claude_hourglass/ui/: hourglass_panel.py  main_window.py  official_login_window.py  settings_dialog.py  theme.py
claude_hourglass/ui/widgets/: current_status_tab.py  hourglass_widget.py  usage_chart.py
scripts/: generate_icons.py  probe_official_webview.py  seed_data.py
statusline_hook/: save_usage.py
